Fixed the empty whitespace at the bottom of the page
-switched the class bg position from absolute to fixed.

-added a background-attachment to bg class and gave it a value of fixed.

-added a background-size with a cover.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,12 +12,15 @@ html{
     opacity: .75;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
     z-index: -1;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat:no-repeat;
     /*z-index: -1 basically puts the background in the background*/
 }
 
